--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "dependencies": {
+    "@prisma/client": "^4.13.0",
     "autoprefixer": "10.4.14",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
@@ -16,6 +20,13 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.1"
+    "react-modal": "^3.16.1",
+    "react-toastify": "^9.1.2",
+    "swr": "^2.1.3",
+    "tailwindcss": "3.3.1",
+    "ts-node": "^10.9.1"
+  },
+  "devDependencies": {
+    "prisma": "^4.13.0"
   }
 }
